Front basically working for editing

--- a/front/Layout.templ
+++ b/front/Layout.templ
@@ -43,6 +43,8 @@ templ Layout(project typeDefines.Project, selectedComponent any) {
 					<main id="main-content" class="flex-1 overflow-y-auto p-6">
 						@components.MainContent(selectedComponent)
 					</main>
+					<!-- Modal mount -->
+					<div id="modal-root"></div>
 				</div>
 			</div>
 		</body>
